# computer_monitoring

./: INTERFACE_PROPOSAL.md  README.md
agent/: .gitignore  Cargo.toml  README.md
agent/src/: api.rs  cli.rs  main.rs
agent/src/domain/: errors.rs  mod.rs  models.rs
agent/src/features/: collect.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
agent/src/utils/: helpers.rs  mod.rs  persistence.rs  sys_utils.rs
client/: .env.local.example  .gitignore  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
client/app/: globals.css  layout.tsx  loading.tsx  manifest.json  not-found.tsx  page.tsx
client/app/(auth)/: layout.tsx
client/app/(auth)/login/: page.tsx
client/app/(auth)/signup/: page.tsx
client/app/(main)/: page.tsx
client/app/[locale]/: globals.css  layout.tsx
client/app/[role]/: layout.tsx  page.tsx
client/app/[role]/agents/: page.tsx
client/app/[role]/computers/: layout.tsx  page.tsx
client/app/admin/: layout.tsx  page.tsx
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/constants/: nav-items.ts
client/src/hooks/: useAuthGuard.ts  useRedirectIfAuthentificated.ts  useRequireAuth.ts
client/src/lib/: axiosInstance.ts  definition.ts  fetcher.ts  utils.ts
client/src/store/: authStore.ts
client/src/stores/: AuthStore.ts
client/src/types/: Auth.ts  Computer.ts  Dashboard.ts  Metrics.ts  User.ts  Users.ts
mobile/: app.json  cesconfig.jsonc  package.json
server/: .gitignore  pom.xml
server/.h2/: computermonitoring.mv.db  computermonitoring.trace.db
(+170 files in other folders)
