[package]
name = "cm-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "4", features = ["derive", "env"] }
sysinfo = { version = "0.37.2" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1.0"
dotenvy = "0.15"
get_if_addrs = "0.5"
hostname = "0.4"
os_info = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
